// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Homepage UX wrappers (default path) > keeps services on the production path without placeholders 1`] = `
<DocumentFragment>
  <div
    data-testid="exclusive-service"
  >
    Exclusive services baseline
  </div>
</DocumentFragment>
`;

exports[`Homepage UX wrappers (default path) > renders the default secondary banner when flags are off 1`] = `
<DocumentFragment>
  <div
    class="py-8 md:py-12"
  >
          
    <div
      data-testid="parallax"
    >
      <h2
        data-testid="parallax-title"
      >
        Atlastays – Where Every Stay Feels Like Home
      </h2>
      <p>
        At Atlastays, every detail is designed for your comfort. Relax in beautifully appointed spaces, enjoy modern amenities, and make every moment unforgettable.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Homepage UX wrappers (default path) > shows the established Why Choose experience 1`] = `
<DocumentFragment>
  <div
    data-testid="why-choose-default"
  >
    Why Choose baseline
  </div>
</DocumentFragment>
`;

exports[`Homepage UX wrappers (default path) > uses verified guest reviews instead of placeholders 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="testimonials-heading"
    class="py-section-gap md:py-section-gap-md lg:py-section-gap-lg isolate relative"
    data-testid="homepage-verified-testimonials"
    style="background-color: var(--bg-secondary, #fdf2e9);"
  >
    <div
      class="mx-auto max-w-luxury px-[5%]"
    >
      <div
        class="text-center max-w-prose mx-auto mb-12"
      >
        <p
          class="font-semibold tracking-[0.18em] uppercase text-xs md:text-sm mb-3"
          style="color: var(--accent-text, #a84832);"
        >
          Kind words
        </p>
        <h2
          class="font-display text-[var(--text-h2)] font-semibold tracking-tight text-text-primary"
          id="testimonials-heading"
          style="font-family: var(--font-family-display);"
        >
          What verified guests say
        </h2>
        <p
          class="mt-3 flex items-center justify-center gap-2 text-sm md:text-base font-semibold text-text-primary"
        >
          <span
            aria-hidden="true"
            style="color: var(--brand-accent, #f08c71);"
          >
            ★
          </span>
          5 · 1 verified stay
        </p>
      </div>
      <div
        class="grid gap-6 md:grid-cols-3 overflow-x-auto md:overflow-visible"
      >
        <div
          class="rounded-2xl bg-white p-6 md:p-8 transition-all duration-[180ms] hover:-translate-y-1.5 min-w-[280px] shadow-[0_2px_8px_rgba(74,53,53,0.05)] hover:shadow-[0_12px_32px_rgba(74,53,53,0.09)]"
          style="border: 1px solid color-mix(in srgb, var(--brand-accent, #f08c71) 70%, #ffffff);"
        >
          <p
            aria-label="5 out of 5 stars"
            class="flex items-center gap-1 text-lg leading-none"
            style="color: var(--brand-accent, #f08c71);"
          >
            <span
              aria-hidden="true"
            >
              ★★★★★
            </span>
          </p>
          <p
            class="mt-4 font-display text-xl md:text-2xl font-normal text-text-primary leading-relaxed"
            style="font-family: var(--font-family-display);"
          >
            “Spotless rooms and warm hosts.”
          </p>
          <div
            class="mt-6 flex items-center gap-3"
          >
            <span
              aria-hidden="true"
              class="inline-flex h-11 w-11 shrink-0 items-center justify-center rounded-full text-sm font-bold text-white"
              style="background: linear-gradient(135deg, rgb(247, 196, 174) 0%, rgb(238, 157, 127) 100%);"
            >
              A
            </span>
            <div>
              <p
                class="font-semibold text-text-primary leading-tight"
              >
                Ananya
              </p>
              <p
                class="text-xs text-text-muted"
              >
                Verified stay
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
